--- a/auth/src/main/resources/application-dev.yml
+++ b/auth/src/main/resources/application-dev.yml
@@ -30,6 +30,13 @@ spring:
       enabled: true
       refresh:
         enabled: true
+  zipkin:
+    base-url: http://localhost:9411
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
 
 #hibernate:
 #  enable_lazy_load_no_trans: true
