--- a/discovery/src/main/resources/application-dev.yml
+++ b/discovery/src/main/resources/application-dev.yml
@@ -4,6 +4,16 @@ server:
 spring:
   application:
     name: discovery
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+  cloud:
+    bus:
+      enabled: true
+      refresh:
+        enabled: true
 
 eureka:
   client:
